kubernetes/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    name: gitea
spec:
  ports:
  # the port that this service should serve on
    - name: "gitea"
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    name: gitea
  type: ClusterIP
  sessionAffinity: ClientIP
