kubernetes/gitea-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: gitea
  name: gitea
spec:
  host: gitea.example.com
  port:
    targetPort: gitea
  to:
    kind: Service
    name: gitea
